# parseltongue

./: Cargo.toml  MAINTAINERS.md  README.md  SECURITY.md  codecov.yml
.github/: FUNDING.yml
.github/workflows/: build.yml
src/: constructs.rs  cursor.rs  lexer.rs  lib.rs  parse.rs  parser.rs  preparse.rs  source.rs  statement.rs  statements.rs  tokens.rs  util.rs
test-data/: correct.ptg
